--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a-scene mindar-image="imageTargetSrc: https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.2/examples/image-tracking/assets/card-example/card.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
 	<img id="card" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.2/examples/image-tracking/assets/card-example/card.png" />
-	<a-asset-item id="avatarModel" src="./applications/assets/Pizza flip animation.gltf"></a-asset-item>
+	<a-asset-item id="avatarModel" src="https://jobpostingbucket.s3.ap-south-1.amazonaws.com/model/Pizza+flip+animation.gltf"></a-asset-item>
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
