--- a/public/surface-tracking/index.html
+++ b/public/surface-tracking/index.html
@@ -4,7 +4,7 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no" />
-    <title>Onirix Web AR SDK - ThreeJS surface-tracking test</title>
+    <title>ThreeJS surface-tracking test</title>
     <script async type="module" src="app.js"></script>
     <link rel="stylesheet" href="app.css" />
   </head>
